also preload fireworks

--- a/index.html
+++ b/index.html
@@ -487,6 +487,7 @@
 
   //preload 
   var preload_images = all_images.concat(reward_images);
+  preload_images = preload_images.concat(["stimuli/fireworks.gif"]);
   console.log(preload_images);
 
   var preload = {
