--- a/index.html
+++ b/index.html
@@ -381,9 +381,9 @@
 
   //combine into full trial list
   //var all_trials = all_trials_1.concat(all_trials_2);
-  //var all_trials = all_trials_1;
+  var all_trials = all_trials_1;
 
-  var all_trials = all_trials_1.slice(0, 2);
+  //var all_trials = all_trials_1.slice(0, 2);
 
   // create general parameters that will update dynamically
   var cur_score = 0
