--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script>
   <script src="jspsych-explore-choice.js"></script>
   <script src="jspsych-show-reward.js"></script>
+  <script src="jspsych-knowledge-choice.js"></script>
   <script src="jsPsych-6.3.1/plugins/jspsych-instructions.js"></script>
   <script src="jsPsych-6.3.1/plugins/jspsych-preload.js"></script>
   <script src="jsPsych-6.3.1/plugins/jspsych-image-button-response.js"></script>
@@ -545,6 +546,121 @@
 
   timeline.push(experiment_end);
 
+  //transition to additional task questions
+  var question_instructions = {
+    type: 'html-button-response',
+    stimulus: "<p style='font-size:20px; font-weight:bold'>Next, we have just a few more questions for you.</p>",
+    choices: ["NEXT"]
+  };
+  timeline.push(question_instructions);
+
+
+  // additional task questions; kc stands for "knowledge check" questions
+
+  //create the test trial structure
+  // set up general parameters
+  kc_nondiagnostic_indices = [[0, 1, 2, 3], [1, 2, 3, 0], [2, 3, 0, 1], [3, 0, 1, 2]];
+  kc_nondiagnostic_indices_shuffled = jsPsych.randomization.shuffle(kc_nondiagnostic_indices);
+  console.log(kc_nondiagnostic_indices_shuffled)
+
+  //create combinations
+  var kc_combinations = [];
+  for (m = 0; m < kc_nondiagnostic_indices.length; m++) {
+    current_combos = [];
+    cur_kc_nondiagnostic_indices = kc_nondiagnostic_indices[m];
+    for (n = 0; n < emotions_1.length; n++) {
+      if (structure_condition == "emotion") {
+        current_nondiagnostic_index = cur_kc_nondiagnostic_indices[n];
+        current_emotion = emotions_1[n];
+        current_reward_key = current_emotion;
+        current_model = models_1[current_nondiagnostic_index];
+      } else if (structure_condition == "model") {
+        current_nondiagnostic_index = cur_kc_nondiagnostic_indices[n];
+        current_emotion = emotions_1[current_nondiagnostic_index];
+        current_model = models_1[n];
+        current_reward_key = current_model;
+      }
+
+      //add noise to the reward (potentially)
+      current_reward_adjusted = compute_reward(
+        reward_matrix_1[current_reward_key]["reward"],
+        noise_type,
+        reward_adj_factor,
+        reward_adj_shift)
+
+      current_stimulus = {
+        "stimulus_id": current_model + img_sep + current_emotion,
+        "emotion": current_emotion,
+        "model": current_model,
+        "image": "stimuli/" + current_model + img_sep + current_emotion + img_ext,
+        "reward_unadjusted": reward_matrix_1[current_reward_key]["reward"],
+        "reward": current_reward_adjusted,
+        "reward_score": current_reward_adjusted * reward_depiction_factor,
+        "reward_image": "stimuli/stars_" + String(current_reward_adjusted) + ".png",
+      }
+
+      current_combos.push(current_stimulus)
+    }
+
+    //add the new trial/ stimulus combination
+    kc_combinations.push(current_combos);
+  }
+
+  kc_combinations_shuffled = jsPsych.randomization.shuffle(kc_combinations);
+  console.log(kc_combinations);
+  console.log(kc_combinations_shuffled);
+
+  // add all trials
+  for (i = 0; i < kc_combinations_shuffled.length; i++) {
+    current_kc_trial = kc_combinations_shuffled[i];
+    console.log(current_trial);
+    trial_num = i + 1;
+
+    //randomize position
+    current_kc_trial_shuffled = jsPsych.randomization.shuffle(current_kc_trial);
+
+    console.log(current_kc_trial_shuffled);
+
+    //get stimulus property arrays
+    trial_stimuli = [];
+    trial_emotions = [];
+    trial_models = [];
+    trial_rewards = [];
+    trial_rewards_unadjusted = [];
+    trial_reward_scores = [];
+    trial_reward_images = [];
+    for (j = 0; j < current_kc_trial_shuffled.length; j++) {
+      cur_trial_stimulus = current_kc_trial_shuffled[j];
+      trial_stimuli.push(cur_trial_stimulus["image"]);
+      trial_emotions.push(cur_trial_stimulus["emotion"]);
+      trial_models.push(cur_trial_stimulus["model"]);
+      trial_rewards.push(cur_trial_stimulus["reward"]);
+      trial_rewards_unadjusted.push(cur_trial_stimulus["reward_unadjusted"]);
+      trial_reward_scores.push(cur_trial_stimulus["reward_score"]);
+      trial_reward_images.push(cur_trial_stimulus["reward_image"]);
+    }
+    var trial = {
+      type: 'knowledge-choice',
+      instruction: "Which picture will give you the most stars?",
+      stimuli: trial_stimuli,
+      reward_scores: trial_reward_scores,
+      reward_images: trial_reward_images,
+      emotions: trial_emotions,
+      models: trial_models,
+      reward_scores_unadjusted: trial_rewards_unadjusted,
+      rewards: trial_rewards,
+      data: {
+        "emotions": trial_emotions,
+        "models": trial_models,
+        "rewards": trial_rewards,
+        "rewards_unadjusted": trial_rewards_unadjusted,
+        "trial_num": trial_num,
+      }
+    };
+    timeline.push(trial)
+  };
+
+
 
   //debrief and code message
   var experimentFinal = [];
@@ -561,30 +677,30 @@
   jsPsych.init({
     timeline: timeline,
     show_progress_bar: true,
-    on_finish: function(data) {
-        console.log(jsPsych.data.get().json());
-        console.log(jsPsych.data.get().csv())
+    on_finish: function (data) {
+      console.log(jsPsych.data.get().json());
+      console.log(jsPsych.data.get().csv())
 
-        //add date to output to ensure no duplicated files
-        const date = new Date();
-        let dateString = date.getFullYear() + '-' + ('0' + (1 + date.getMonth())).slice(-2) + '-' + ('0' + date.getDate()).slice(-2) + '_';
-        dateString += ('0' + date.getHours()).slice(-2) + 'h' + ('0' + date.getMinutes()).slice(-2) + '.' + ('0' + date.getSeconds()).slice(-2) + '.' + date.getMilliseconds();
-        console.log(dateString)
+      //add date to output to ensure no duplicated files
+      const date = new Date();
+      let dateString = date.getFullYear() + '-' + ('0' + (1 + date.getMonth())).slice(-2) + '-' + ('0' + date.getDate()).slice(-2) + '_';
+      dateString += ('0' + date.getHours()).slice(-2) + 'h' + ('0' + date.getMinutes()).slice(-2) + '.' + ('0' + date.getSeconds()).slice(-2) + '.' + date.getMilliseconds();
+      console.log(dateString)
 
-        var participant_identifier = jsPsych.data.get().last(1).values()[0].participant
+      var participant_identifier = jsPsych.data.get().last(1).values()[0].participant
 
-        fetch("https://pipe.jspsych.org/api/data/", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-            Accept: "*/*",
-          },
-          body: JSON.stringify({
-            experimentID: "m4lN0jeU0Lrk",
-            filename: "emogo_kids_v1_" + participant_identifier + "_" + dateString + ".csv",
-            data: jsPsych.data.get().csv(),
-          }),
-        });
+      fetch("https://pipe.jspsych.org/api/data/", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+          Accept: "*/*",
+        },
+        body: JSON.stringify({
+          experimentID: "m4lN0jeU0Lrk",
+          filename: "emogo_kids_v1_" + participant_identifier + "_" + dateString + ".csv",
+          data: jsPsych.data.get().csv(),
+        }),
+      });
       //jsPsych.data.displayData();
       jsPsych.init({
         timeline: experimentFinal,
