add a post trial gap

--- a/index.html
+++ b/index.html
@@ -655,7 +655,8 @@
         "rewards": trial_rewards,
         "rewards_unadjusted": trial_rewards_unadjusted,
         "trial_num": trial_num,
-      }
+      },
+      post_trial_gap: 300
     };
     timeline.push(trial)
   };
